//
//  Constants.swift
//  Decafit
//
//  Created by Decagon on 03/08/2022.
//

import Foundation

enum Constants {
    static let emailHolder = "Email address"
    static let pswHolder = "Password"
    static let fullname = "Full name"
    static let phone = "Phone number"
    static let confirmPsw = "Confirm password"
    static let signIn = "Sign In"
    static let signUp = "Sign up"
    static let next = "Next"
    static let logout = "Log Out"

    static let run = "Run"
    static let close = "Close"
    static let loginHeadertext = "Track \n your fitness"
    static let createPlan = "Create a \nfitness/nutrition plan"
    static let noAccounttext = "Don't have an account? "
    static let signinWith = " Or sign in with "
    static let yesAccount = "Already have an account? "
    static let limit = "Set your limit"
    static let inputvcSubt = "Enter the number of reps and sets for your workout"
    static let sets = "Number of sets"
    static let reps = "Number of reps"
    static let time = "Estimated time"
    static let count = "Number of counts"
    
    static let googleImg = "google-logo"
    static let fbImg = "fb-img"
    static let appleImg = "apple-img"
    static let fitnessImg = "fitness-img"
    static let signupImg = "signup-img"
    static let calenderImg = "calender"
    static let profileImg = "profile"
    static let backArrow = "back-arrow"
    static let weightImg = "weightlift"
    static let clockImg = "clock"
    static let flameImg = "flame.fill"
    static let playImg = "play"
    static let playFillSystemImg = "play.fill"
    static let pauseImg = "pause.fill"

    static let requiredInit = "init(coder:) has not been implemented"
    static let goodMorning = "Good Morning"
    static let todayCellId = "TodayCell"
    static let workoutCellId = "StartWorkoutCell"
    static let exerciseCellId = "ExerciseCell"
    static let workoutModalTopSwipeCell = "WorkoutModalTopSwipeCell"
    static let exerciseLabelText = "This Exercise"
    static let workoutDurationLabelText = "X10"
    static let bodyFocusAreaText = "First"
    static let focusDurationLabelText = "Second"
    static let focusAreaViewTitleText = "Other Focus Areas"
    static let todaySessionViewTitleText = "Today's session"
    static let todayFirstLabelText = "First"
    static let todaySecondLabelText = "Counts"
    static let todayThirdLabelTextAfterIcon = " 24 min"
    static let todayFourthLabelTextAfterIcon = " 24 Kcal"
    
    static let alertTitleError = "Error!"
    static let networkError = "Network Error"
    static let passwordMismatchError = "Passwords do not match!"
    static let blankTextFieldError = "All fields are required!"
    static let incorrectInputError = "Incorrect input"
    
    static let loginText = "login5"
    static let userID = "userID"
    
    static let overlayIdentifier = "overlay"
    static let removeShadow = "hidesShadow"
    
    static let nextWorkout = "Next Workout"
    static let nextExercise = "Next Exercise"
    static let completeText = "complete"
    static let incompleteText = "incomplete"
    static let continueWorkout = "Continue Workout"
    static let repeatWorkout = "Repeat Workout"
    static let repeatExercise = "Repeat Exercise"
    static let endWorkout = "End Workout"
    static let startWorkout = "Start Workout"
    static let workoutComplete = "Workout Complete"

    static let resume = " Resume"
    static let pause = " Pause"
    static let start = "  Start"

    static let urlStr = "https://decagon-decafit-api.herokuapp.com/decafit"
    static let workoutStartedText = "in progress"
    static let FocusAreaDialogMsg =  "You are yet to complete this workout. What would you like to do?"
    static let calenderCellId = "calenderCellId"
}
