import UIKit

class ExerciseTimerView: UIView {
    override init(frame: CGRect) {
        super.init(frame: frame)
        accessibilityIdentifier = "ExerciseTimerView"
        setupSubviews()
    }
    required init?(coder: NSCoder) {
        fatalError(Constants.requiredInit)
    }
    lazy var topImageView: UIView = {
...
